--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,13 @@
 * {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-html, body {
   margin: 0;
-  border: 0;
   padding: 0;
-  background-color: #fff;
+  box-sizing: border-box;
 }
 
-main {
-  margin: auto;
-  width: 50%;
-  padding: 20px;
-}
-
-main > h1 {
-  text-align: center;
-  font-size: 3.5em;
+.hoja {
+  background-color: rgb(26, 26, 26);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
 }
